fixed overflow issue in chatwindow by setting height to vh instead of %. It was previously broken because it was trying tomatch a parent elements % height which caused overflow issues

--- a/client/src/css/ChatApp.sass
+++ b/client/src/css/ChatApp.sass
@@ -283,7 +283,7 @@ $logo-text: arista, "Nunito", sans-serif
     justify-content: flex-start
     align-items: flex-start
     width: 100%
-    height: 78%
+    height: 78vh
     overflow-y: scroll
 
     .receivedMessage
